# moodTunes-Ai

./: Readme.md
backend/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  youtube_cache.json
backend/cache/: music_cache.json
backend/modules/: __init__.py  chatbot.py  models.py  mood_detection.py  music_player.py  recommendation_engine.py  voice_to_text.py
backend_backup/: start_backend.bat
backend_backup/modules/: config.py  voice_to_text.py
frontend/: .gitignore  README.md  index.html  package.json  start_frontend.bat
frontend/src/: App.jsx  index.css
frontend/src/components/: Chatbot.jsx  Header.jsx  Hero.jsx  MoodDetection.jsx  MusicPlayer.jsx  Particles.jsx  PreferenceSelection.jsx  Recommendations.jsx  StepCards.jsx
